@@ -493,12 +493,12 @@ public class Launcher extends StatefulActivity<LauncherState>
             }
         }
 
+        StatsLogManager.StatsLatencyLogger.LatencyType newProcessStartupType =
+                LockedUserState.get(this).isUserUnlockedAtLauncherStartup()
+                ? COLD
+                : COLD_DEVICE_REBOOTING;
         mStartupLatencyLogger = createStartupLatencyLogger(
-                sIsNewProcess
-                        ? LockedUserState.get(this).isUserUnlockedAtLauncherStartup()
-                            ? COLD
-                            : COLD_DEVICE_REBOOTING
-                        : WARM);
+                sIsNewProcess ? newProcessStartupType : WARM);
 
         mIsColdStartupAfterReboot = sIsNewProcess
             && !LockedUserState.get(this).isUserUnlockedAtLauncherStartup();
@@ -2176,8 +2176,8 @@ public class Launcher extends StatefulActivity<LauncherState>
             // Folder height is less than page height, so bound it to the absolute open folder
             // bounds if necessary
             Rect folderBounds = grid.getAbsoluteOpenFolderBounds();
-            left = Math.max(folderBounds.left, Math.min(left, folderBounds.right - width));
-            top = Math.max(folderBounds.top, Math.min(top, folderBounds.bottom - height));
+            left = Math.clamp(left, folderBounds.left, folderBounds.right - width);
+            top = Math.clamp(top, folderBounds.top, folderBounds.bottom - height);
         }
         inOutPosition[0] = left;
         inOutPosition[1] = top;
